--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
   </head>
   <body class="body-portfolio">
     <header>
