--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="node_modules/modern-normalize/modern-normalize.min.css"
     />
   </head>
   <body class="body-studio">
-    <header>
+    <header class="header-container">
       <!--Navigation section-->
-      <div class="hero-content-container">
+      <div class="hero-content container">
         <nav class="navigation">
           <a class="logo link" href="./index.html"
             >Web<span class="accent-header">Studio</span></a
@@ -64,71 +64,88 @@
       <!--First section-->
 
       <section class="first-section">
-        <h1 class="first-section-title">
-          Effective Solutions for Your Business
-        </h1>
-        <button class="first-section-button" type="button">
-          Order Service
-        </button>
+        <div class="first-section container">
+          <h1 class="first-section-title">
+            Effective Solutions for Your Business
+          </h1>
+          <button class="first-section-button" type="button">
+            Order Service
+          </button>
+        </div>
       </section>
 
       <!--Second section-->
 
       <section class="second-section">
-        <h2 hidden>text</h2>
-        <ul class="list second-section-container">
-          <li>
-            <h3 class="second-section-title">Strategy</h3>
-            <p class="second-section-paragraph">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
+        <div class="second-section container">
+          <h2 hidden>text</h2>
+          <ul class="list second-section-container">
+            <li class="second-section-item">
+              <h3 class="second-section-title">Strategy</h3>
+              <p class="second-section-paragraph">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="second-section-title">Punctuality</h3>
-            <p class="second-section-paragraph">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
+            <li class="second-section-item">
+              <h3 class="second-section-title">Punctuality</h3>
+              <p class="second-section-paragraph">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="second-section-title">Diligence</h3>
-            <p class="second-section-paragraph">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
+            <li class="second-section-item">
+              <h3 class="second-section-title">Diligence</h3>
+              <p class="second-section-paragraph">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="second-section-title">Technologies</h3>
-            <p class="second-section-paragraph">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+            <li class="second-section-item">
+              <h3 class="second-section-title">Technologies</h3>
+              <p class="second-section-paragraph">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Third section-->
       <section class="third-section-container">
-        <h2 class="third-section-title">What are we doing</h2>
-        <ul class="third-section list">
-          <li>
-            <img src="./images/image1.jpg" alt="typing" width="360" />
-          </li>
-          <li>
-            <img src="./images/image3.jpg" alt="phone" width="360" />
-          </li>
-          <li>
-            <img
-              src="./images/image2.jpg"
-              alt="hands holding a tablet"
-              width="360"
-            />
-          </li>
-        </ul>
+        <div class="third-section container">
+          <h2 class="third-section-title">What are we doing</h2>
+          <ul class="third-section list">
+            <li class="third-section-item">
+              <img
+                class="third-section-image"
+                src="./images/image1.jpg"
+                alt="typing"
+                width="360"
+              />
+            </li>
+            <li class="third-section-item">
+              <img
+                class="third-section-image"
+                src="./images/image3.jpg"
+                alt="phone"
+                width="360"
+              />
+            </li>
+            <li class="third-section-item">
+              <img
+                class="third-section-image"
+                src="./images/image2.jpg"
+                alt="hands holding a tablet"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Fourth section-->
       <div class="fourth-section-container">
