--- a/index.html
+++ b/index.html
@@ -204,15 +204,16 @@
 
     <footer class="footer">
       <!--Logo-->
+      <div class="footer-container">
+        <a href="./index.html" class="web-footer link"
+          >Web<span class="accent-footer">Studio</span></a
+        >
 
-      <a href="./index.html" class="web-footer link"
-        >Web<span class="accent-footer">Studio</span></a
-      >
-
-      <p class="index link footer-paragraph">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <p class="index link footer-paragraph">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
