--- a/portfolio.html
+++ b/portfolio.html
@@ -21,161 +21,202 @@
     />
   </head>
   <body class="body-portfolio">
-    <header>
+    <header class="header-container">
       <!--Navigation section-->
-      <nav>
-        <a class="logo link" href="./index.html"
-          >Web<span class="accent-header">Studio</span></a
-        >
+      <div class="hero-content container">
+        <nav class="navigation">
+          <a class="logo link" href="./index.html"
+            >Web<span class="accent-header">Studio</span></a
+          >
 
-        <ul class="list">
-          <li>
-            <a href="./index.html" class="index link">Index</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="index link">Portfolio</a>
-          </li>
+          <ul class="list menu">
+            <li>
+              <a href="./index.html" class="index link">Index</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="index link">Portfolio</a>
+            </li>
 
-          <li><a href="" class="index link">Studio</a></li>
-          <li>
-            <a href="" class="index link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <!--Address-->
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="contact link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="contact link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+            <li><a href="" class="index link">Studio</a></li>
+            <li>
+              <a href="" class="index link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+
+        <!--Address-->
+        <address class="address">
+          <ul class="address list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="contact link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="contact link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="section-portfolio">
-        <h1>Title</h1>
-        <ul class="list">
-          <li><button type="button" class="button-portfolio">All</button></li>
-          <li>
-            <button type="button" class="button-portfolio">Web Site</button>
-          </li>
-          <li><button type="button" class="button-portfolio">App</button></li>
-          <li>
-            <button type="button" class="button-portfolio">Design</button>
-          </li>
-          <li>
-            <button type="button" class="button-portfolio">Marketing</button>
-          </li>
-        </ul>
+        <div class="portfolio-cards container">
+          <h1 hidden>Title</h1>
+          <ul class="portfolio-cards-list list">
+            <li><button type="button" class="button-portfolio">All</button></li>
+            <li>
+              <button type="button" class="button-portfolio">Web Site</button>
+            </li>
+            <li><button type="button" class="button-portfolio">App</button></li>
+            <li>
+              <button type="button" class="button-portfolio">Design</button>
+            </li>
+            <li>
+              <button type="button" class="button-portfolio">Marketing</button>
+            </li>
+          </ul>
 
-        <ul class="list">
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/image4.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-              />
-              <h2 class="title-element">Banking App Interface Concept</h2>
-              <p class="paragraph-element">App</p>
-            </a>
-          </li>
+          <ul class="portfolio-images list container">
+            <li class="list-element">
+              <a href="" class="link">
+                <img
+                  src="./images/image4.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                />
+                <div class="name-application">
+                  <h2 class="title-element">Banking App Interface Concept</h2>
+                  <p class="paragraph-element">App</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="list-element">
-            <a href="" class="link">
-              <img
-                src="./images/image5.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <h2 class="title-element">Cashless Payment</h2>
-              <p class="paragraph-element">Marketing</p>
-            </a>
-          </li>
+            <li class="list-element">
+              <a href="" class="link">
+                <img
+                  src="./images/image5.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="name-application">
+                  <h2 class="title-element">Cashless Payment</h2>
+                  <p class="paragraph-element">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="list-element">
-            <a href="" class="link">
-              <img src="./images/image6.jpg" alt="Meditation App" width="360" />
-              <h2 class="title-element">Meditation App</h2>
-              <p class="paragraph-element">App</p>
-            </a>
-          </li>
+            <li class="list-element">
+              <a href="" class="link">
+                <img
+                  src="./images/image6.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <div class="name-application">
+                  <h2 class="title-element">Meditation App</h2>
+                  <p class="paragraph-element">App</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="list-element">
-            <a href="" class="link">
-              <img src="./images/image7.jpg" alt="Taxi Service" width="360" />
-              <h2 class="title-element">Taxi Service</h2>
-              <p class="paragraph-element">Marketing</p>
-            </a>
-          </li>
+            <li class="list-element">
+              <a href="" class="link">
+                <img src="./images/image7.jpg" alt="Taxi Service" width="360" />
+                <div class="name-application">
+                  <h2 class="title-element">Taxi Service</h2>
+                  <p class="paragraph-element">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="list-element">
-            <a href="" class="link">
-              <img
-                src="./images/image8.jpg"
-                alt="screen illustrations"
-                width="360"
-              />
-              <h2 class="title-element">Screen Illustrations</h2>
-              <p class="paragraph-element">Design</p>
-            </a>
-          </li>
+            <li class="list-element">
+              <a href="" class="link">
+                <img
+                  src="./images/image8.jpg"
+                  alt="screen illustrations"
+                  width="360"
+                />
+                <div class="name-application">
+                  <h2 class="title-element">Screen Illustrations</h2>
+                  <p class="paragraph-element">Design</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="list-element">
-            <a href="" class="link">
-              <img src="./images/image9.jpg" alt="Online Courses" width="360" />
-              <h2 class="title-element">Online Courses</h2>
-              <p class="paragraph-element">Marketing</p>
-            </a>
-          </li>
+            <li class="list-element">
+              <a href="" class="link">
+                <img
+                  src="./images/image9.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <div class="name-application">
+                  <h2 class="title-element">Online Courses</h2>
+                  <p class="paragraph-element">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="list-element">
-            <a href="" class="link">
-              <img
-                src="./images/image10.jpg"
-                alt="Instagram Stories concept"
-                width="360"
-              />
-              <h2 class="title-element">Instagram Stories Concept</h2>
-              <p class="paragraph-element">Design</p>
-            </a>
-          </li>
+            <li class="list-element">
+              <a href="" class="link">
+                <img
+                  src="./images/image10.jpg"
+                  alt="Instagram Stories concept"
+                  width="360"
+                />
+                <div class="name-application">
+                  <h2 class="title-element">Instagram Stories Concept</h2>
+                  <p class="paragraph-element">Design</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="list-element">
-            <a href="" class="link">
-              <img src="./images/image11.jpg" alt="organic food" width="360" />
-              <h2 class="title-element">Organic Food</h2>
-              <p class="paragraph-element">Web Site</p>
-            </a>
-          </li>
+            <li class="list-element">
+              <a href="" class="link">
+                <img
+                  src="./images/image11.jpg"
+                  alt="organic food"
+                  width="360"
+                />
+                <div class="name-application">
+                  <h2 class="title-element">Organic Food</h2>
+                  <p class="paragraph-element">Web Site</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="list-element">
-            <a href="" class="link">
-              <img src="./images/image12.jpg" alt="Fresh Coffee" width="360" />
-              <h2 class="title-element">Fresh Coffee</h2>
-              <p class="paragraph-element">Web Site</p>
-            </a>
-          </li>
-        </ul>
+            <li class="list-element">
+              <a href="" class="link">
+                <img
+                  src="./images/image12.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                />
+                <div class="name-application">
+                  <h2 class="title-element">Fresh Coffee</h2>
+                  <p class="paragraph-element">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="web-footer link"
-        >Web<span class="accent-footer">Studio</span></a
-      >
+      <div class="footer-container">
+        <a href="./index.html" class="web-footer link"
+          >Web<span class="accent-footer">Studio</span></a
+        >
 
-      <p class="index link footer-paragraph">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <p class="index link footer-paragraph">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
