--- a/index.html
+++ b/index.html
@@ -148,20 +148,23 @@
         </div>
       </section>
       <!--Fourth section-->
-      <div class="fourth-section-container">
+      
         <section class="fourth-section">
+          <div class="fourth-section-container container">
           <h2 class="fourth-section-title">Our Team</h2>
-          <ul class="fourth-section list">
+
+          <ul class="fourth-section-list list">
             <li class="list-item">
+              <div class="list-item-card">
               <img
                 class="card-image"
                 src="./images/man2.jpg"
                 alt="man with glasses smilig"
                 width="264"
               />
-
               <h3 class="second-section-title">Mark Guerrero</h3>
               <p class="second-section-paragraph">Product Designer</p>
+              </div>
             </li>
 
             <li class="list-item">
@@ -171,7 +174,6 @@
                 alt="woman smiling"
                 width="264"
               />
-
               <h3 class="second-section-title">Tom Ford</h3>
               <p class="second-section-paragraph">Frontend Developer</p>
             </li>
