--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <section class="second-section">
         <div class="second-section container">
-          <h2 hidden>text</h2>
+          <h2 .visually-hidden>text</h2>
           <ul class="list second-section-container">
             <li class="second-section-item">
               <h3 class="second-section-title">Strategy</h3>
@@ -148,22 +148,22 @@
         </div>
       </section>
       <!--Fourth section-->
-      
-        <section class="fourth-section">
-          <div class="fourth-section-container container">
+
+      <section class="fourth-section">
+        <div class="fourth-section-container container">
           <h2 class="fourth-section-title">Our Team</h2>
 
           <ul class="fourth-section-list list">
             <li class="list-item">
-              <div class="list-item-card">
               <img
                 class="card-image"
                 src="./images/man2.jpg"
                 alt="man with glasses smilig"
                 width="264"
               />
-              <h3 class="second-section-title">Mark Guerrero</h3>
-              <p class="second-section-paragraph">Product Designer</p>
+              <div class="name-and-job">
+                <h3 class="second-section-title">Mark Guerrero</h3>
+                <p class="second-section-paragraph">Product Designer</p>
               </div>
             </li>
 
@@ -200,8 +200,8 @@
               <p class="second-section-paragraph">UI Designer</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
