--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web studio Homework</title>
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
@@ -14,10 +19,6 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.min.css"
     />
   </head>
   <body class="body-studio">
@@ -78,7 +79,7 @@
 
       <section class="second-section">
         <div class="second-section container">
-          <h2 .visually-hidden>text</h2>
+          <h2 hidden>text</h2>
           <ul class="list second-section-container">
             <li class="second-section-item">
               <h3 class="second-section-title">Strategy</h3>
