--- a/index.html
+++ b/index.html
@@ -175,8 +175,10 @@
                 alt="woman smiling"
                 width="264"
               />
-              <h3 class="second-section-title">Tom Ford</h3>
-              <p class="second-section-paragraph">Frontend Developer</p>
+              <div class="name-and-job">
+                <h3 class="second-section-title">Tom Ford</h3>
+                <p class="second-section-paragraph">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="list-item">
@@ -186,8 +188,10 @@
                 alt="man without glasses smiling"
                 width="264"
               />
-              <h3 class="second-section-title">Camila Garcia</h3>
-              <p class="second-section-paragraph">Marketing</p>
+              <div class="name-and-job">
+                <h3 class="second-section-title">Camila Garcia</h3>
+                <p class="second-section-paragraph">Marketing</p>
+              </div>
             </li>
 
             <li class="list-item">
@@ -197,8 +201,10 @@
                 alt="man in black with glasses smiling"
                 width="264"
               />
-              <h3 class="second-section-title">Daniel Wilson</h3>
-              <p class="second-section-paragraph">UI Designer</p>
+              <div class="name-and-job">
+                <h3 class="second-section-title">Daniel Wilson</h3>
+                <p class="second-section-paragraph">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
