--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <section class="second-section">
         <div class="second-section container">
-          <h2 hidden>text</h2>
+          <h2 class="visually-hidden">text</h2>
           <ul class="list second-section-container">
             <li class="second-section-item">
               <h3 class="second-section-title">Strategy</h3>
@@ -213,7 +213,7 @@
 
     <footer class="footer">
       <!--Logo-->
-      <div class="footer-container">
+      <div class="footer-container container">
         <a href="./index.html" class="web-footer link"
           >Web<span class="accent-footer">Studio</span></a
         >
