--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
     <main>
       <section class="section-portfolio">
         <div class="portfolio-cards container">
-          <h1 hidden>Title</h1>
+          <h1 class="visually-hidden">text</h1>
           <ul class="portfolio-cards-list list">
             <li><button type="button" class="button-portfolio">All</button></li>
             <li>
