--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 width="264"
               />
               <div class="name-and-job">
-                <h3 class="second-section-title">Mark Guerrero</h3>
+                <h3 class="fourth-section-name">Mark Guerrero</h3>
                 <p class="fourth-section-paragraph">Product Designer</p>
               </div>
             </li>
@@ -176,7 +176,7 @@
                 width="264"
               />
               <div class="name-and-job">
-                <h3 class="second-section-title">Camila Garcia</h3>
+                <h3 class="fourth-section-name">Camila Garcia</h3>
                 <p class="fourth-section-paragraph">Frontend Developer</p>
               </div>
             </li>
@@ -189,7 +189,7 @@
                 width="264"
               />
               <div class="name-and-job">
-                <h3 class="second-section-title">Tom Ford</h3>
+                <h3 class="fourth-section-name">Tom Ford</h3>
                 <p class="fourth-section-paragraph">Marketing</p>
               </div>
             </li>
@@ -202,7 +202,7 @@
                 width="264"
               />
               <div class="name-and-job">
-                <h3 class="second-section-title">Daniel Wilson</h3>
+                <h3 class="fourth-section-name">Daniel Wilson</h3>
                 <p class="fourth-section-paragraph">UI Designer</p>
               </div>
             </li>
