--- a/index.html
+++ b/index.html
@@ -45,15 +45,17 @@
           </ul>
         </nav>
         <!--Address-->
-        <address class="address">
-          <ul class="address list">
+        <address class="contact">
+          <ul class="list">
             <li>
-              <a href="mailto:info@devstudio.com" class="contact link"
+              <a
+                href="mailto:info@devstudio.com"
+                class="address-description link"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a href="tel:+110001111111" class="contact link"
+              <a href="tel:+110001111111" class="address-description link"
                 >+11 (000) 111-11-11</a
               >
             </li>
