--- a/index.html
+++ b/index.html
@@ -11,19 +11,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
   </head>
   <body class="body-studio">
     <header class="header-container">
-      <!--Navigation section-->
       <div class="hero-content container">
         <nav class="navigation">
           <a class="logo link" href="./index.html"
@@ -32,19 +26,16 @@
 
           <ul class="list menu">
             <li>
-              <a href="./index.html" class="index link">Index</a>
-            </li>
-            <li>
-              <a href="./portfolio.html" class="index link">Portfolio</a>
+              <a href="./portfolio.html" class="index link">Studio</a>
             </li>
 
-            <li><a href="" class="index link">Studio</a></li>
+            <li><a href="" class="index link">Portfolio</a></li>
             <li>
               <a href="" class="index link">Contacts</a>
             </li>
           </ul>
         </nav>
-        <!--Address-->
+
         <address class="contact">
           <ul class="list">
             <li>
@@ -67,7 +58,7 @@
       <!--First section-->
 
       <section class="first-section">
-        <div class="first-section container">
+        <div class="container">
           <h1 class="first-section-title">
             Effective Solutions for Your Business
           </h1>
@@ -80,7 +71,7 @@
       <!--Second section-->
 
       <section class="second-section">
-        <div class="second-section container">
+        <div class="container">
           <h2 class="visually-hidden">text</h2>
           <ul class="list second-section-container">
             <li class="second-section-item">
@@ -120,7 +111,7 @@
 
       <!--Third section-->
       <section class="third-section-container">
-        <div class="third-section container">
+        <div class="container">
           <h2 class="third-section-title">What are we doing</h2>
           <ul class="third-section list">
             <li class="third-section-item">
@@ -153,7 +144,7 @@
       <!--Fourth section-->
 
       <section class="fourth-section">
-        <div class="fourth-section-container container">
+        <div class="container">
           <h2 class="fourth-section-title">Our Team</h2>
 
           <ul class="fourth-section-list list">
@@ -215,7 +206,7 @@
 
     <footer class="footer">
       <!--Logo-->
-      <div class="footer-container container">
+      <div class="container">
         <a href="./index.html" class="web-footer link"
           >Web<span class="accent-footer">Studio</span></a
         >
