--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
           <ul class="list menu">
             <li>
-              <a href="./portfolio.html" class="index link">Studio</a>
+              <a href="" class="index link">Studio</a>
             </li>
 
-            <li><a href="" class="index link">Portfolio</a></li>
+            <li><a href="./portfolio.html" class="index link">Portfolio</a></li>
             <li>
               <a href="" class="index link">Contacts</a>
             </li>
